chore(deps): Upgrade to Spring Boot 3.2.0