@@ -1,12 +1,11 @@
 plugins {
-	id 'org.springframework.boot' version '2.6.6'
-	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+	id 'org.springframework.boot' version '3.2.0'
+	id 'io.spring.dependency-management' version '1.1.7'
 	id 'java'
 }
-
 group = 'io.spring.sagan'
 version = "1.0.0-SNAPSHOT"
-sourceCompatibility = 11
+sourceCompatibility = 17
 
 repositories {
 	mavenCentral()
@@ -37,5 +36,7 @@ dependencies {
 
 test {
 	useJUnitPlatform()
+	jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
+			'--add-opens', 'java.base/java.util=ALL-UNNAMED'
 }
 
